# linuxprivchecker

./: .gitignore  .gitmodules  LICENSE  README.md  linuxprivchecker.py  linuxprivchecker.py3  linuxprivchecker.sh  privcheckerserver.py  requirements.txt  setup.cfg  setup.py
linuxprivchecker/: __init__.py  __main__.py
