[metadata]
# replace with your username:
name = linuxprivchecker
version = 1.0.0
author = Michael "Sleventyeleven" Contino
author_email = mcontino@live.com
description = Linux Privilege Escalation Check Script
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sleventyeleven/linuxprivchecker
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >=3
[options.entry_points]
console_scripts =
    linuxprivchecker = linuxprivchecker:run_check